<resources>
    <string name="app_name">Theia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location_services_not_enabled">Location services must be enabled to use the map.
        Would you like to enable it now?"</string>

    <string name="action_settings">Settings</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chat">Messenger</string>
    <string name="title_activity_main">Welcome Page</string>
    <string name="title_activity_create">Create Account</string>
    <string name="title_activity_friend">Your Friends</string>
    <string name="title_activity_nearby">Who\'s Nearby</string>
    <string name="title_activity_setting">Profile Settings</string>

    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_course">Course</string>
    <string name="hint_favplaces">Favourite Places</string>
    <string name="hint_username">Username</string>
    <string name="hint_birthday">Birthday DD/MM/YY</string>

    <string name="radio_public">Public</string>
    <string name="radio_private">Private</string>

    <string name="button_create">Create</string>
    <string name="button_sign">Sign In</string>
    <string name="button_changepassword">Change Password</string>
    <string name="button_ok">OK</string>
    <string name="button_delete">Delete Profile</string>

    <string name="text_noacc">No Account?</string>
    <string name="text_navigation">Navigation</string>
</resources>
