<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:id="@+id/mainGridLayout"
        android:background="#ffffff"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_create"
            android:id="@+id/textViewCreateTitle"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="30sp"
            android:paddingStart="100dp"
            android:paddingLeft="100dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextcUser"
            android:layout_row="1"
            android:layout_column="1"
            android:width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_columnSpan="1"
            android:hint="@string/hint_name"
            android:layout_below="@+id/textViewCreateTitle"
            android:layout_centerHorizontal="true"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextcPass"
            android:layout_row="2"
            android:layout_column="1"
            android:width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignStart="@+id/editTextcUser"
            android:hint="@string/hint_password"
            android:layout_below="@+id/editTextcUser"
            android:inputType="textNoSuggestions" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextcCourse"
            android:layout_row="3"
            android:layout_column="1"
            android:width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/radioButtonsPub"
            android:layout_alignStart="@+id/radioButtonsPub"
            android:layout_alignEnd="@+id/editTextcPass"
            android:inputType="text"
            android:hint="@string/hint_course" />

        <EditText
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextcPlace"
            android:layout_row="4"
            android:layout_column="1"
            android:width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/editTextcCourse"
            android:layout_alignStart="@+id/editTextcCourse"
            android:layout_alignEnd="@+id/editTextcCourse"
            android:inputType="text"
            android:hint="@string/hint_favplaces" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_public"
            android:id="@+id/radioButtonsPub"
            android:layout_row="5"
            android:layout_column="1"
            android:checked="false"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/editTextcPass"
            android:layout_alignStart="@+id/editTextcPass" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_private"
            android:id="@+id/radioButtonsPriv"
            android:layout_row="6"
            android:layout_column="1"
            android:checked="true"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/editTextcCourse"
            android:layout_alignEnd="@+id/editTextcCourse" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/button_create"
            android:id="@+id/buttoncCreate"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/editTextcPlace"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>