<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_page"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign"
            android:id="@+id/buttonSignIn"
            android:layout_below="@+id/editTextPass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_noacc"
            android:id="@+id/textViewAccount"
            android:layout_below="@+id/buttonSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:id="@+id/buttonCreate"
            android:layout_below="@+id/textViewAccount"
            android:layout_alignEnd="@+id/buttonSignIn"
            android:layout_alignStart="@+id/buttonSignIn" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextsUser"
            android:layout_below="@+id/textViewtitle"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_username"
            android:layout_alignParentEnd="true"
            android:inputType="textNoSuggestions" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPass"
            android:hint="@string/hint_password"
            android:layout_below="@+id/editTextsUser"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:paddingTop="50dp"
            android:inputType="textNoSuggestions"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:adjustViewBounds="false"
        android:id="@+id/imageView" />
</RelativeLayout>
